--- a/spreadsheet.html
+++ b/spreadsheet.html
@@ -2,14 +2,21 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
     <style type="text/css">
         @import url("website.css");
     </style>
+
 </head>
 
-<script lang="JavaScript" src="test.js">
-
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-analytics.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-firestore.js"></script>
+<script type="text/javascript" src="./main.js"></script>
+<script>
+    getData()
 </script>
+
 
 <body>
     <!-- start of vt logo -->
@@ -36,10 +43,22 @@
             <a class="navtab" href="./map.html">MAP</a>
             <a class="navtab" href="./spreadsheet.html">SPREADSHEET</a>
             <a class="navtab" href="./app.html">APP</a>
+            <script>
+                login_check()
+                document.write(login_tab(loginCheck))
+            </script>
         </ul>
     </div>
     <!-- end of navigation block -->
-    <a>this is spread sheet page</a>
+    <div class="downloadDiv">
+        <button onclick="download()" class="downloadButton">Download Data</button>
+    </div>
+    <!-- <button onclick="buildTable(loginCheck)">Load Table</button> -->
+    <table id="table" class="table"></table>
+    <script>
+        buildTable(loginCheck)
+    </script>
+
 </body>
 
 </html>
