--- a/app.html
+++ b/app.html
@@ -61,21 +61,21 @@
             <img class="illus" src="./pictures/clone.png">
             <p>
                 Next, we need to configure the project's dependence, open <b>Terminal</b> in <b>LaunchPad > Other</b>, inside it, write:
+                <br>&emsp;&emsp; <b>cd Desktop/WildlifeTrackerApp-main</b>
                 <br>&emsp;&emsp; <b>sudo gem install cocoapods</b>
             </p>
             <img class="illus" src="./pictures/cocoapods.png">
             <p>
                 when finished type:
-                <br>&emsp;&emsp; <b>cd Desktop/WildlifeTrackerApp-main</b>
+
                 <br>&emsp;&emsp; <b>pod init</b>
                 <br>&emsp;&emsp; <b>pod update</b>
-                <br>it may take some time to run
             </p>
             <img class="illus" src="./pictures/podinit.png">
             <p>
-                When the previous step is finished, open Xcode and choose <b>Open a project or file</b>, then choose the folder you just unziped.
+                When the previous step is finished, open the folder of the source code and open <b>TrackDiseases.xcworkspace</b>, you will see Xcode open up
             </p>
-            <img class="illus" src="./pictures/open.png">
+            <img class="illus" src="./pictures/folder.png">
 
             <p>
                 Connect your iphone to your mac then on the top of the Xcode window, click on the tab <b>right to the stop button</b>, then choose your iphone from the list then click <b>play button</b>
@@ -83,9 +83,14 @@
             <img class="illus" src="./pictures/selectPhone.png" width=628 height=84>
             <img class="illus" src="./pictures/phonelist.png">
             <p>
-                when finished, you can see the app on your phone and start using
+                when finished, you can see the app on your phone
             </p>
             <img class="illus" src="./pictures/app.png" width=500 height=1082>
+            <p>
+                The Last step is to change your phone setting, go to <b>setting > general > Device Management > Apple Development: piecz1118@gmail.com</b>, then click <b>Trust</b> it will pop up a alert, chose trust, then the app will be ready to use
+            </p>
+            <img class="illus" src="./pictures/trust1.jpg"width=500 height=889>
+            <img class="illus" src="./pictures/trust2.jpg"width=500 height=889>
         </div>
     </div>
 </body>
