--- a/home.html
+++ b/home.html
@@ -46,8 +46,10 @@
         <div class="article">
             <h1>What is This Project For</h1>
             <p class="home_content">
-                This project is to help achieve early detection of a disease called mange, also known as demodicosis or red mange. Mange is a skin disease caused by parastic mites, it can happens on domestic mammals, livestock, and wild mamals,
+                This project is to help achieve early detection of a disease called mange, also known as demodicosis or red mange. Mange is a skin disease caused by parastic mites, it can happens on domestic mammals, livestock, and wild mamals. Animals suffer from mange will have poor condition of skin and fur due to the infection.
             </p>
+            <img class="illus" src="pictures/dogwithmange.jpg" width=500 height=333>
+            <img class="illus" src="pictures/Mange-Dogs-Symptoms-2.jpg" width=500 height=325>
             <h1>Help Us by uploading More Data</h1>
             <p class="home_content">
                 It doesn't matter how much you know about the disease, you can always use our <a href="./app.html">IOS app</a> to upload picture of what you think is animal suffering from mange
@@ -66,6 +68,12 @@ There are many causes that we are facing the challenges of zoonotic diseases, an
                 Even though the monitoring process can be expensive and time consuming, it is still crucial to monitor and track wildlife diseases. And as McLean suggested that early detection is one of the keys to prevention, citizen science brings an opportunity for this. With the use of knowledge in the Computer Science field, the previous group who started this project from scratch focused on the development of an mobile application freely available to the public to track infectious diseases in wildlife, and our task is to develop a better version by updating and finalizing based on previous work.
 
 
+            </p>
+            <h1>
+                Contact information
+            </h1>
+            <p class="home_content">
+                if you have any question or encounter any problems, please contact <a href="https://fishwild.vt.edu/faculty/escobar.html">Dr. Luis E. Escobar</a> at <a href="mailto:apptrackwildlifediseases@gmail.com?">apptrackwildlifediseases@gmail.com</a> or <a href="mailto:escobar1@vt.edu?">escobar1@vt.edu</a>
             </p>
         </div>
     </div>
